package structure.composite.example;

public class FileTreatmentException extends RuntimeException {      // RuntimeException������������
    public FileTreatmentException() {
    }
    public FileTreatmentException(String msg) {
        super(msg);
    }
}
